# sbgck-core

./: .gitmodules  CMakeLists.txt  Makefile  build.sh  buildr.sh  tests.sh  updatesubmodules.sh
include/: api.hpp  dummy.hpp  property.hpp  sbgck.hpp
include/internal/: cameramanager.hpp  componentmanager.hpp  entities.hpp  filemanager.hpp  soundmanager.hpp
src/: api.cpp  assetsys_implementation.c  cameramanager.cpp  cameramanager.hpp  componentmanager.cpp  componentmanager.hpp  dummy.cpp  filemanager.cpp  filemanager.hpp  querytoken.cpp  querytoken.hpp  sbgck.cpp  sleep.cpp  sleep.hpp  soundmanager.cpp  soundmanager.hpp
src/sigslot/: signal.hpp
tests/: CMakeLists.txt  base.hpp  test_cameramanager.cpp  test_componentmanager.cpp  test_engine.cpp  test_filemanager.cpp  test_querytoken.cpp  test_soundmanager.cpp
tests/games/: .gitignore  README.md
tests/games/test_componentmanager/: board_test.json  gameconfig.json  token_test.json
tests/games/test_componentmanager/boards/: Arctic-base.json  board_test_1.json  board_test_2.json
tests/games/test_engine/: gameconfig.json
tests/games/test_engine_no_camera/: gameconfig.json
tests/games/test_engine_no_camera/boards/: README.md
tests/games/test_soundmanager/: README.txt
